--- a/ATMS-597-SP-2020-Project-2/Project2.ipynb
+++ b/ATMS-597-SP-2020-Project-2/Project2.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -119,7 +119,7 @@
     "    datain[key][(np.abs(datain[key])==9999)] = np.nan\n",
     "    datain.dropna(inplace=True)\n",
     "    datain[key] = datain[key].astype(\"float\") / 10.\n",
-    "    datain[\"date\"] = pd.to_datetime(df[\"date\"], infer_datetime_format=True)\n",
+    "    datain[\"date\"] = pd.to_datetime(datain[\"date\"], infer_datetime_format=True)\n",
     "    datain.index = datain[\"date\"]\n",
     "    return datain\n",
     "    "
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -421,41 +421,561 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\YangLu\\Anaconda3\\envs\\gpu\\lib\\site-packages\\ipykernel_launcher.py:68: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>20167.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10.490256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>11.571727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-26.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>18.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>37.800000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              value\n",
+       "count  20167.000000\n",
+       "mean      10.490256\n",
+       "std       11.571727\n",
+       "min      -26.100000\n",
+       "25%        1.700000\n",
+       "50%       10.600000\n",
+       "75%       18.900000\n",
+       "max       37.800000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>datatype</th>\n",
+       "      <th>station</th>\n",
+       "      <th>attributes</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01</th>\n",
+       "      <td>1970-01-01</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>GHCND:USC00280907</td>\n",
+       "      <td>,,0,0800</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01</th>\n",
+       "      <td>1970-01-01</td>\n",
+       "      <td>TMIN</td>\n",
+       "      <td>GHCND:USC00280907</td>\n",
+       "      <td>,,0,0800</td>\n",
+       "      <td>-11.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-02</th>\n",
+       "      <td>1970-01-02</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>GHCND:USC00280907</td>\n",
+       "      <td>,,0,0800</td>\n",
+       "      <td>-2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-02</th>\n",
+       "      <td>1970-01-02</td>\n",
+       "      <td>TMIN</td>\n",
+       "      <td>GHCND:USC00280907</td>\n",
+       "      <td>,,0,0800</td>\n",
+       "      <td>-11.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-03</th>\n",
+       "      <td>1970-01-03</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>GHCND:USC00280907</td>\n",
+       "      <td>,,0,0800</td>\n",
+       "      <td>-2.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 date datatype            station attributes  value\n",
+       "date                                                               \n",
+       "1970-01-01 1970-01-01     TMAX  GHCND:USC00280907   ,,0,0800    0.0\n",
+       "1970-01-01 1970-01-01     TMIN  GHCND:USC00280907   ,,0,0800  -11.7\n",
+       "1970-01-02 1970-01-02     TMAX  GHCND:USC00280907   ,,0,0800   -2.2\n",
+       "1970-01-02 1970-01-02     TMIN  GHCND:USC00280907   ,,0,0800  -11.1\n",
+       "1970-01-03 1970-01-03     TMAX  GHCND:USC00280907   ,,0,0800   -2.2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "df_mean = df.resample(\"7D\").mean()\n",
-    "display(df_mean, df_mean.describe())\n",
-    "# freq=\"W\" starts with Sunday\n",
-    "df[\"W_num\"] = (df[\"date\"].dt.dayofyear - 1) // 7\n",
-    "df.groupby(\"W_num\").mean()\n",
-    "#df.drop(df[\"date\"].dt.dayofyear > 364, inplace=True)\n",
-    "df.tail(20)\n",
-    "df.index.year"
+    "df_ref = loop_request(locationid=\"CITY:US360019\", startdate=datetime.date(1970, 1, 1), enddate=datetime.date(1998, 12, 31), stationid=\"GHCND:USC00280907\")\n",
+    "df_ref = clean_up(df_ref, \"value\")\n",
+    "display(df_ref.describe(), df_ref.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_leap_and_29Feb_and_last_day(s):\n",
-    "    return ((s.index.year % 4 == 0) & ((s.index.year % 100 != 0) | (s.index.year % 400 == 0)) & (s.index.month == 2) & (s.index.day == 29)) | ((s.index.month == 12) & (s.index.day == 31))\n",
+    "def is_leap_and_last_day(s):\n",
+    "    return ((s.index.year % 4 == 0) & ((s.index.year % 100 != 0) | (s.index.year % 400 == 0)) & (s.index.month == 12) & (s.index.day == 30)) | ((s.index.month == 12) & (s.index.day == 31))\n",
     "\n",
-    "def cal_anomaly(df, freq=\"W\"):\n",
-    "    mask = is_leap_and_29Feb_and_last_day(df)\n",
-    "    df_W = df[~mask]\n",
+    "def cal_anomaly_W(df, df_ref):\n",
+    "    # Calculate reference weekly temperature from 1970 to the end of 1999\n",
+    "    mask = is_leap_and_last_day(df_ref)\n",
+    "    df_ref_tmp = df_ref[~mask]\n",
+    "    df_ref_tmp[\"W_num\"] = (df_ref_tmp[\"date\"].dt.dayofyear - 1) // 7\n",
+    "    df_ref_W = df_ref_tmp.groupby(\"W_num\").mean()\n",
     "    \n",
-    "    df_W = df_W.resample(\"W\").mean()\n",
+    "    mask = is_leap_and_last_day(df)\n",
+    "    df_tmp = df[~mask]\n",
+    "    df_W = df_tmp.resample(\"7D\").mean()\n",
+    "    df_W[\"W_num\"] = (df_W.index.dayofyear - 1) // 7\n",
+    "    \n",
+    "    for num in set(df_W[\"W_num\"]):\n",
+    "        df_W[df_W[\"W_num\"]==num][\"value\"] -= df_ref_W[\"value\"][num]\n",
     "        \n",
-    "        "
+    "    return df_W, df_ref_W"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\YangLu\\Anaconda3\\envs\\gpu\\lib\\site-packages\\ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "C:\\Users\\YangLu\\Anaconda3\\envs\\gpu\\lib\\site-packages\\ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>52.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10.467937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.059757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-3.925831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.149539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10.566533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>18.908621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>23.827833</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           value\n",
+       "count  52.000000\n",
+       "mean   10.467937\n",
+       "std     9.059757\n",
+       "min    -3.925831\n",
+       "25%     2.149539\n",
+       "50%    10.566533\n",
+       "75%    18.908621\n",
+       "max    23.827833"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "      <th>W_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>114.000000</td>\n",
+       "      <td>114.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10.812845</td>\n",
+       "      <td>25.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.362083</td>\n",
+       "      <td>16.011196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-11.271429</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.967857</td>\n",
+       "      <td>11.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10.389286</td>\n",
+       "      <td>25.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>19.230357</td>\n",
+       "      <td>39.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>26.528571</td>\n",
+       "      <td>51.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            value       W_num\n",
+       "count  114.000000  114.000000\n",
+       "mean    10.812845   25.500000\n",
+       "std      9.362083   16.011196\n",
+       "min    -11.271429    0.000000\n",
+       "25%      2.967857   11.250000\n",
+       "50%     10.389286   25.500000\n",
+       "75%     19.230357   39.750000\n",
+       "max     26.528571   51.000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "      <th>W_num</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01</th>\n",
+       "      <td>5.357143</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-08</th>\n",
+       "      <td>8.200000</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-15</th>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-22</th>\n",
+       "      <td>10.421429</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-29</th>\n",
+       "      <td>2.300000</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                value  W_num\n",
+       "date                        \n",
+       "2015-12-01   5.357143     47\n",
+       "2015-12-08   8.200000     48\n",
+       "2015-12-15   6.500000     49\n",
+       "2015-12-22  10.421429     50\n",
+       "2015-12-29   2.300000     51"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "      <th>W_num</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-02</th>\n",
+       "      <td>-11.271429</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-09</th>\n",
+       "      <td>-0.885714</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-16</th>\n",
+       "      <td>-2.571429</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-23</th>\n",
+       "      <td>2.092857</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-30</th>\n",
+       "      <td>-0.266667</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                value  W_num\n",
+       "date                        \n",
+       "2018-01-02 -11.271429      0\n",
+       "2018-01-09  -0.885714      1\n",
+       "2018-01-16  -2.571429      2\n",
+       "2018-01-23   2.092857      3\n",
+       "2018-01-30  -0.266667      4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_W, df_ref_W = cal_anomaly_W(df, df_ref)\n",
+    "display(df_ref_W.describe(), df_W.describe(), df_W.head(), df_W.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,15 +1003,6 @@
     "        Rectangle((y, min_temp-buffer), 7, temp_delta+2*buffer) # need to change 7 to other values when resampled at other frequencies\n",
     "        for y in date_corrected.astype(int)[::7]\n",
     "    ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[0, 1, 2, 3, 4, 5][::3]"
    ]
   },
   {
