--- a/ATMS-597-SP-2020-Project-2/climatestripes.ipynb
+++ b/ATMS-597-SP-2020-Project-2/climatestripes.ipynb
@@ -6,7 +6,7 @@
       "name": "examples.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPbWINGMezs0tShWOUp34XK",
+      "authorship_tag": "ABX9TyMMBAXA6tiARocJUWIvyZ0V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -412,20 +412,20 @@
       "metadata": {
         "id": "YKG64jrxicFX",
         "colab_type": "code",
-        "outputId": "b15013f8-ce97-4681-e248-98b4dddd8f07",
+        "outputId": "f87c7e32-5983-467e-97c4-49218ff9dd52",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 105
         }
       },
       "source": [
         "df_ref = loop_request(locationid=\"CITY:SP000001\", startdate=datetime.date(1970, 1, 1), enddate=datetime.date(1998, 12, 31), stationid=\"GHCND:SPE00155259\")\n",
         "df_ref = clean_up(df_ref)\n",
         "\n",
-        "''' Uncomment to display output '''\n",
+        "# Uncomment to display output\n",
         "# display(df_ref.describe(), df_ref.head())"
       ],
-      "execution_count": 30,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,18 +436,6 @@
             "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "' Uncomment to display output '"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 30
         }
       ]
     },
@@ -466,44 +454,17 @@
       "metadata": {
         "id": "5AdHXqWlUPG9",
         "colab_type": "code",
-        "outputId": "ea012155-6d0d-4162-abb8-55402d4eb6d9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
-        }
+        "colab": {}
       },
       "source": [
         "df = loop_request(locationid=\"CITY:SP000001\", startdate=datetime.date(1914, 1, 1), enddate=datetime.date(2013, 12, 31), stationid=\"GHCND:SPE00155259\")\n",
         "df = clean_up(df)\n",
         "\n",
-        "''' Uncomment to display output '''\n",
+        "# Uncomment to display output\n",
         "# display(df.describe(), df.head(), df.tail())"
       ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:112: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "' Uncomment to display output '"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -530,49 +491,16 @@
       "metadata": {
         "id": "B9ccd0efgpwk",
         "colab_type": "code",
-        "outputId": "0c981769-85d5-4d02-eadd-5d859f37b226",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 224
-        }
+        "colab": {}
       },
       "source": [
         "df_W, df_ref_W = cal_anomaly_W(df, df_ref)\n",
         "\n",
-        "''' Uncomment to display output '''\n",
+        "# Uncomment to display output\n",
         "# display(df_ref_W, df.head(), df_W.head())"
       ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "' Uncomment to display output '"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 32
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -664,7 +592,7 @@
       "source": [
         "df_M, df_ref_M = cal_anomaly_M(df, df_ref)\n",
         "\n",
-        "''' Uncomment to display output '''\n",
+        "# Uncomment to display output\n",
         "# display(df_ref_M, df.head(), df_M.head())"
       ],
       "execution_count": 34,
@@ -777,7 +705,7 @@
       "source": [
         "df_Y, df_ref_Y = cal_anomaly_Y(df, df_ref)\n",
         "\n",
-        "''' Uncomment to display output '''\n",
+        "# Uncomment to display output\n",
         "# display(df_ref_Y, df.head(), df_Y.head())"
       ],
       "execution_count": 36,
