Updated docstrings for leap year/last day function

--- a/ATMS-597-SP-2020-Project-2/climatestripes.ipynb
+++ b/ATMS-597-SP-2020-Project-2/climatestripes.ipynb
@@ -6,7 +6,7 @@
       "name": "examples.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMBAXA6tiARocJUWIvyZ0V",
+      "authorship_tag": "ABX9TyOgykk7eJ4ot6njK3fDRniU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,7 +191,7 @@
         "        - datain: the DataFrame to perform the function on\n",
         "    \n",
         "    Returns:\n",
-        "        cleaned up DataFrame\n",
+        "        - cleaned up DataFrame\n",
         "    ---\n",
         "    Adapted from S. Nesbitt, Module 2, ATMS 597 SP 2020\n",
         "    '''\n",
@@ -228,7 +228,14 @@
       "source": [
         "def is_leap_and_last_day(s):\n",
         "    \"\"\"\n",
-        "    TBD by Yang\n",
+        "    Checks if the year is a leap year. If the year is a leap year, checks for\n",
+        "    both the second to last day and the last day of the year.\n",
+        "\n",
+        "    Parameters:\n",
+        "        - s: the DataFrame to perform the function on\n",
+        "    \n",
+        "    Returns:\n",
+        "        - Function to remove the leap day and last 2 days of the year\n",
         "    \"\"\"\n",
         "    return ((s.index.year % 4 == 0) & ((s.index.year % 100 != 0) | (s.index.year % 400 == 0)) & (s.index.month == 12) & (s.index.day == 30)) | ((s.index.month == 12) & (s.index.day == 31))\n",
         "\n",
@@ -454,7 +461,11 @@
       "metadata": {
         "id": "5AdHXqWlUPG9",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "5712859c-172c-44e3-a127-664b251f5e86",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
       },
       "source": [
         "df = loop_request(locationid=\"CITY:SP000001\", startdate=datetime.date(1914, 1, 1), enddate=datetime.date(2013, 12, 31), stationid=\"GHCND:SPE00155259\")\n",
@@ -463,8 +474,19 @@
         "# Uncomment to display output\n",
         "# display(df.describe(), df.head(), df.tail())"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:112: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -491,7 +513,11 @@
       "metadata": {
         "id": "B9ccd0efgpwk",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "1a680fc0-8768-475b-dcc1-e63568ed15e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 207
+        }
       },
       "source": [
         "df_W, df_ref_W = cal_anomaly_W(df, df_ref)\n",
@@ -499,8 +525,25 @@
         "# Uncomment to display output\n",
         "# display(df_ref_W, df.head(), df_W.head())"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -583,10 +626,10 @@
       "metadata": {
         "id": "ychXNVR6m_Zi",
         "colab_type": "code",
-        "outputId": "476167e1-d864-4a84-ded1-6a2374d1bdc0",
+        "outputId": "370d91e3-4264-4dde-e294-7fe8c550257b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 105
         }
       },
       "source": [
@@ -595,7 +638,7 @@
         "# Uncomment to display output\n",
         "# display(df_ref_M, df.head(), df_M.head())"
       ],
-      "execution_count": 34,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,18 +649,6 @@
             "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "' Uncomment to display output '"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 34
         }
       ]
     },
