--- a/ATMS-597-SP-2020-Project-2/climatestripes.ipynb
+++ b/ATMS-597-SP-2020-Project-2/climatestripes.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "examples.ipynb",
+      "name": "climatestripes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOgykk7eJ4ot6njK3fDRniU",
+      "authorship_tag": "ABX9TyNSoe0TipKd7K7pv8YnVNNm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -196,7 +196,7 @@
         "    Adapted from S. Nesbitt, Module 2, ATMS 597 SP 2020\n",
         "    '''\n",
         "    # clean up missing values\n",
-        "    datain[\"value\"][(np.abs(datain[\"value\"])==9999)] = np.nan\n",
+        "    datain[\"value\"][(np.abs(datain[\"value\"]) == 9999)] = np.nan\n",
         "    datain.dropna(inplace=True)\n",
         "    # adjust unit from 10th of degree C to degree C\n",
         "    datain[\"value\"] = datain[\"value\"].astype(\"float\") / 10.\n",
@@ -241,7 +241,13 @@
         "\n",
         "def cal_anomaly_W(df, df_ref):\n",
         "    \"\"\"\n",
-        "    TBD\n",
+        "    Calculates weekly averaged temperature anomaly (departure) from the reference period.\n",
+        "    Parameters:\n",
+        "        - df: DataFrame from which anomaly is calculated\n",
+        "        - df_ref: DataFrame of the reference period\n",
+        "    Returns:\n",
+        "        - df_W: weekly averaged anomaly\n",
+        "        - df_ref_W: weekly averaged reference temperatures\n",
         "    \"\"\"\n",
         "    # reference frame\n",
         "    mask = is_leap_and_last_day(df_ref)\n",
@@ -256,13 +262,19 @@
         "    df_W[\"W_num\"] = (df_W.index.dayofyear) // 7\n",
         "    \n",
         "    for num in set(df_W[\"W_num\"]):\n",
-        "        df_W[\"value\"][df_W[\"W_num\"]==num] -= df_ref_W[\"value\"][num]\n",
+        "        df_W[\"value\"][df_W[\"W_num\"] == num] -= df_ref_W[\"value\"][num]\n",
         "        \n",
         "    return df_W, df_ref_W\n",
         "\n",
         "def cal_anomaly_M(df, df_ref):\n",
         "    \"\"\"\n",
-        "    TBD\n",
+        "    Calculates monthly averaged temperature anomaly (departure) from the reference period.\n",
+        "    Parameters:\n",
+        "        - df: DataFrame from which anomaly is calculated\n",
+        "        - df_ref: DataFrame of the reference period\n",
+        "    Returns:\n",
+        "        - df_M: monthly averaged anomaly\n",
+        "        - df_ref_M: monthly averaged reference temperatures\n",
         "    \"\"\"\n",
         "    # reference frame:\n",
         "    df_ref_tmp = df_ref.resample('MS').mean()\n",
@@ -275,13 +287,19 @@
         "\n",
         "    # calculate anomaly:\n",
         "    for num in set(df_M['M_num']):\n",
-        "        df_M['value'][df_M['M_num']==num] -= df_ref_M['value'][num]\n",
+        "        df_M['value'][df_M['M_num'] == num] -= df_ref_M['value'][num]\n",
         "    \n",
         "    return df_M, df_ref_M\n",
         "\n",
         "def cal_anomaly_Y(df, df_ref):\n",
         "    \"\"\"\n",
-        "    TBD\n",
+        "    Calculates yearly averaged temperature anomaly (departure) from the reference period.\n",
+        "    Parameters:\n",
+        "        - df: DataFrame from which anomaly is calculated\n",
+        "        - df_ref: DataFrame of the reference period\n",
+        "    Returns:\n",
+        "        - df_Y: yearly averaged anomaly\n",
+        "        - df_ref_Y: yearly averaged reference temperatures\n",
         "    \"\"\"\n",
         "    # reference frame (just a number now)\n",
         "    df_ref_Y = df_ref['value'].mean()\n",
@@ -358,14 +376,14 @@
         "    ])\n",
         "\n",
         "    stripes = len(df.index)\n",
-        "    fig = plt.figure(figsize=(min(0.2*stripes,12), 5))\n",
+        "    fig = plt.figure(figsize=(min(0.2*stripes, 12), 5))\n",
         "    ax = fig.add_axes([0.1, 0.12, 0.9, 0.88])\n",
         "    \n",
         "    date_str_list = ['{}'.format(d) for d in df.index]\n",
         "    date_corrected = mdates.datestr2num(date_str_list)\n",
         "\n",
         "    col = PatchCollection([\n",
-        "        Rectangle( (y, min_temp-buffer), interval, temp_delta+2*buffer) \n",
+        "        Rectangle((y, min_temp - buffer), interval, temp_delta + 2*buffer) \n",
         "        for y in date_corrected.astype(int)\n",
         "    ]) \n",
         "    # set data, colormap and color limits\n",
@@ -373,7 +391,7 @@
         "    col.set_cmap(cmap)\n",
         "    col.set_clim(min_temp, max_temp)\n",
         "    ax.add_collection(col)\n",
-        "    ax.set_ylim(min_temp-buffer, max_temp+buffer)\n",
+        "    ax.set_ylim(min_temp - buffer, max_temp + buffer)\n",
         "    ax.set_xlim(date_corrected[0], date_corrected[-1])\n",
         "    formatter = mdates.DateFormatter('%Y-%m-%d')\n",
         "    ax.xaxis.set_major_formatter(formatter)\n",
@@ -794,19 +812,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pqG20DO9zBCF",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
